Login issued fixed

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 NODE_ENV=development
-VUE_APP_API_GATEWAY_URL=https://api-gateway.kothao.com/api/v1
+VUE_APP_AWESOME_NODE_API=http://localhost:3000/api/v1
