--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^2.9.3",
     "core-js": "^3.4.4",
     "moment": "^2.24.0",
+    "path-to-regex": "^1.3.1",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
