--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 NODE_ENV=development
 VUE_APP_AWESOME_NODE_API=http://localhost:3000/api/v1
+VUE_APP_AWESOME_NODE_API_BASE_URL=http://localhost:3000/
