--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 NODE_ENV=development
-VUE_APP_AWESOME_NODE_API=http://localhost:3000/api/v1
-VUE_APP_AWESOME_NODE_API_BASE_URL=http://localhost:3000/
+VUE_APP_AWESOME_NODE_API=https://enigmatic-falls-50191.herokuapp.com/api/v1
+VUE_APP_AWESOME_NODE_API_BASE_URL=https://enigmatic-falls-50191.herokuapp.com/
