--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-chartjs": "^3.5.0",
+    "vue-loading-overlay": "^3.0.1",
     "vue-router": "^3.1.5",
     "vue-wysiwyg": "^1.7.2",
     "vuejs-dialog": "^1.4.1"
