--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-NODE_ENV=development
-VUE_APP_AWESOME_NODE_API=https://portfolio.iamsukanta.com/api/v1
-VUE_APP_AWESOME_NODE_API_BASE_URL=https://portfolio.iamsukanta.com/
+NODE_ENV=production
+VUE_APP_AWESOME_NODE_API=https://api.iamsukanta.com/api/v1
+VUE_APP_AWESOME_NODE_API_BASE_URL=https://api.iamsukanta.com/
